--- a/lojaweb/.settings/org.eclipse.wst.common.component
+++ b/lojaweb/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="lojaweb">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <dependent-module archiveName="maven-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/curso-maven/curso-maven">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="lojaweb"/>
         <property name="java-output-path" value="/lojaweb/target/classes"/>
     </wb-module>
